Updated home SCSS

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,10 +1,10 @@
-  page-popover-template>ion-content>div.scroll-content {
-    // height: 300vh;
-  }
+  // page-popover-template>ion-content>div.scroll-content {
+  //   // height: 300vh;
+  // }
 
-  page-popover-template>ion-content>div.scroll-content>button {
-    // margin-bottom: 1500px;
-  }
+  // page-popover-template>ion-content>div.scroll-content>button {
+  //   // margin-bottom: 1500px;
+  // }
 
 // page-popover-template {
 // }
@@ -264,9 +264,9 @@ page-home {
         margin: 0px 2px;
         text-align: left;
       }
-      &:last-of-type {
-        // margin-right: 0px;
-      }
+      // &:last-of-type {
+      //   // margin-right: 0px;
+      // }
     }
   }
 
