--- a/src/assets/fonts/onsitex_fonts.scss
+++ b/src/assets/fonts/onsitex_fonts.scss
@@ -227,9 +227,9 @@
 
 @font-face {
   font-family: 'icomoon';
-  src:  url('../assets/fonts/icomoon.eot') format('embedded-opentype'),
-    url('../assets/fonts/icomoon.ttf') format('truetype'),
-    url('../assets/fonts/icomoon.woff') format('woff');
+  src:  url('../assets/fonts/icomoon.eot?2l10jd') format('embedded-opentype'),
+    url('../assets/fonts/icomoon.ttf?2l10jd') format('truetype'),
+    url('../assets/fonts/icomoon.woff?2l10jd') format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -250,6 +250,12 @@
 }
 /* IcoMoon custom OnSiteX font */
 
+.icomoon-work-shift-light:before {
+  content: "\ebd7";
+}
+.icomoon-work-shift:before {
+  content: "\ea22";
+}
 .icomoon-home:before {
   content: "\e9e8";
 }
@@ -419,7 +425,7 @@
   content: "\ea21";
 }
 .icomoon-qrcode:before {
-  content: "\ea22";
+  content: "\ebd6";
 }
 .icomoon-ticket:before {
   content: "\ea23";
