Updates to remove stuff and fix some bugs
Removd pouchdb-all-dbs for causing startup errors (maybe). Removed ion-digit-keyboard because it was never used. Also changd PouchDB tests and adapters.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,4 +1,4 @@
-@import '../components/ion-digit-keyboard/ion-digit-keyboard';
+// @import '../components/ion-digit-keyboard/ion-digit-keyboard';
 @import '../assets/fonts/onsitex_fonts';
 // http://ionicframework.com/docs/v2/theming/
 
