--- a/src/components/clock/clock.scss
+++ b/src/components/clock/clock.scss
@@ -29,7 +29,7 @@ clock {
       font-family: "Roboto";
       font-size: 18px;
       margin-top: 5px;
-      white-space: pre-wrap;
+      white-space: wrap;
       // max-height: 25%;
       z-index: -10;
 
